# johnathan_url_shortener

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.sh  todo.md
.github/workflows/: github-action-demo.yml
johnathan_url_shortener/: config.py  dependencies.py  main.py
johnathan_url_shortener/adapters/database/: __init__.py  url.py
johnathan_url_shortener/adapters/database/migrations/: env.py
johnathan_url_shortener/adapters/database/migrations/versions/: e14be8fa3b04_creating_url_table.py
johnathan_url_shortener/adapters/repositories/: url.py
johnathan_url_shortener/routers/: __init__.py
johnathan_url_shortener/routers/url/: router.py
johnathan_url_shortener/services/: unit_of_work.py
johnathan_url_shortener/services/url/: get.py  register.py
johnathan_url_shortener/utils/: __init__.py
tests/e2e/: conftest.py  test_api.py  test_get_shortened_url.py  test_get_url.py  test_health_check.py  test_register_shortened_url.py  test_register_url.py
tests/unit/services/: test_get_url.py  test_register_url.py
tests/utils/: unit_of_work.py
tests/utils/repositories/: url.py
