[tool.poetry]
name = "johnathan-url-shortener"
version = "0.1.0"
description = ""
authors = ["Johnathan Barbosa <jbarbosa0504@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.2"}


[tool.poetry.group.test.dependencies]
httpx = "^0.27.2"
pytest = "^8.3.3"
black = "^24.10.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
