[project]
name = "johnathan-url-shortener"
version = "0.1.0"
description = ""
authors = [{ name = "Johnathan Barbosa", email = "jbarbosa0504@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.115.2,<0.116",
    "pydantic-settings>=2.6.0,<3",
    "python-dotenv>=1.0.1,<2",
    "sqlalchemy>=2.0.36,<3",
    "psycopg2>=2.9.10,<3",
    "alembic>=1.13.3,<2",
]

[dependency-groups]
test = [
    "httpx>=0.27.2,<0.28",
    "pytest>=8.3.3,<9",
    "black>=24.10.0,<25",
    "ipdb>=0.13.13,<0.14",
]

[tool.uv]
package = false
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
